--- a/pom.xml
+++ b/pom.xml
@@ -9,19 +9,19 @@
 
     <properties>
         <slf4j.version>1.6.1</slf4j.version>
-        <versionCode>2</versionCode>
+        <versionCode>3</versionCode>
         <versionName>${project.version}</versionName>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <timestamp>${maven.build.timestamp}</timestamp>
         <buildNumber>${env.BUILD_NUMBER}</buildNumber>
-<!--        <channel>snapshots</channel>-->
-        <channel>releases</channel>
+        <channel>snapshots</channel>
+<!--        <channel>releases</channel>-->
         <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
     </properties>
    
     <packaging>jar</packaging>
-    <version>0.1.1</version>
+    <version>0.1.2</version>
     
     <organization>
         <!-- Used as the 'Vendor' for JNLP generation -->
