feat (Editor) async document opening in editors
- The editor is now responsible for opening the document, if not done
yet (used to be the plugin manager)
- Fixed wrong label size in status bar

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -120,6 +120,7 @@ project_wizard.name = Name
 project_wizard.location = Location
 
 # Task names
+task.opening_file = Opening File %s
 task.saving_file = Saving File %s
 task.closing_project = Closing Project %s
 task.creating_file = Creating File %s
