Tuned memory settings for native package
Xms768m and Xmx2048m

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
                     <nativeReleaseVersion>${versionName}</nativeReleaseVersion>
                     <silentJfxFix>true</silentJfxFix>
                     <identifier>Shift</identifier>
+                    <jvmArgs>-Xms=768m -Xmx=2048m</jvmArgs>
                 </configuration>
             </plugin>
            
