--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -81,6 +81,7 @@ main.menu.edit.content_assist = Content Assist...
 main.menu.window = Window
 main.menu.window.new_preview = New Preview
 main.menu.help = Help
+main.menu.help.preferences = Preferences
 main.menu.help.about = About
 main.open_project.title = Open a Project folder
 main.import.title = Import
@@ -92,6 +93,9 @@ main.preview_picker.title = Choose a preview
 main.preview_picker.text = Several previews are available for this kind of file.\nPlease select one.
 main.rename.title = Rename
 main.about.title = About
+
+# Preferences controller
+preferences.title = Preferences
 
 # Editors pane
 editors_pane.welcome.message = This is the editors pane. Double click a file in the project navigator to edit it.
