Preferences window done

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -23,6 +23,7 @@
 # THE SOFTWARE.
 # #L%
 ###
+
 # Common
 ok = OK
 cancel = Cancel
@@ -96,6 +97,11 @@ main.about.title = About
 
 # Preferences controller
 preferences.title = Preferences
+
+# Preferences panels
+# Name rule is : preferences.panel.<panel path>
+# Example : prefernces.panel.general.theme
+preferences.panel.wope = WOPE
 
 # Editors pane
 editors_pane.welcome.message = This is the editors pane. Double click a file in the project navigator to edit it.
