Basic WOPE preferences panel layout

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -163,3 +163,5 @@ builtin.plugin.project_wizard.initializr.connection_warning = An Internet connec
 builtin.plugin.preview.wope.title = WOPE Preview
 builtin.plugin.preview.wope.not_configured.text = This preview is still experimental, edit your ~.shift.preferences.json file to configure it.
 builtin.plugin.preview.wope.task.starting_runtime = Starting runtime %s
+builtin.plugin.preferences.wope.license = License
+builtin.plugin.preferences.wope.runtimes = Runtimes
