WOPE plugin isolation
- put all WOPE plugin classes in org.shiftedit.wope
- put all WOPE plugin resources into resources/wope
- i18n support for plugins as well with the i18Bundle property

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -100,8 +100,8 @@ preferences.title = Preferences
 
 # Preferences panels
 # Name rule is : preferences.panel.<panel path>
-# Example : prefernces.panel.general.theme
-preferences.panel.wope = WOPE
+# Example : preferences.panel.general.theme
+
 
 # Editors pane
 editors_pane.welcome.message = This is the editors pane. Double click a file in the project navigator to edit it.
@@ -160,8 +160,3 @@ builtin.plugin.preview.remote_html.no_connection = No connection
 builtin.plugin.preview.remote_html.track_active_file = Track
 builtin.plugin.project_wizard.initializr.flavor = Flavor
 builtin.plugin.project_wizard.initializr.connection_warning = An Internet connection is required
-builtin.plugin.preview.wope.title = WOPE Preview
-builtin.plugin.preview.wope.not_configured.text = This preview is still experimental, edit your ~.shift.preferences.json file to configure it.
-builtin.plugin.preview.wope.task.starting_runtime = Starting runtime %s
-builtin.plugin.preferences.wope.license = License
-builtin.plugin.preferences.wope.runtimes = Runtimes
