License picking on WOPE preferences panel

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -97,6 +97,7 @@ main.about.title = About
 
 # Preferences controller
 preferences.title = Preferences
+preferences.invalid_data.text = Invalid data detected, please fill all the mandatory fields and try again.
 
 # Preferences panels
 # Name rule is : preferences.panel.<panel path>
