--- a/src/main/resources/wope/i18n.properties
+++ b/src/main/resources/wope/i18n.properties
@@ -1,6 +1,7 @@
 preferences.panel.wope = WOPE
 
 preferences.wope.license = License
+preferences.wope.license_extension.text = WOPE license file
 preferences.wope.runtimes = Runtimes
 
 preview.wope.title = WOPE Preview
