Finished WOPE configuration panel
- List with add / remove buttons to manage installed runtimes
- Runtine (war) manifest check to assert package validity and compliance

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -33,6 +33,9 @@ close = Close
 browse = Browse...
 stop = Stop
 start = Start
+add = Add
+delete = Delete
+remove = Remove
 
 # Validators
 validator.not.blank = Cannot be blank
