--- a/src/main/resources/wope/i18n.properties
+++ b/src/main/resources/wope/i18n.properties
@@ -2,8 +2,14 @@ preferences.panel.wope = WOPE
 
 preferences.wope.license = License
 preferences.wope.license_extension.text = WOPE license file
+preferences.wope.runtime_extension.text = WOPE runtime file
 preferences.wope.runtimes = Runtimes
+preferences.wope.runtimes.no_runtime = No runtime
+preferences.wope.runtimes.name = Name
+preferences.wope.runtimes.path = Path
+preferences.wope.runtimes.remove_confirmation.text = The WOPE runtime will removed.\nDo you want to continue ?
+preferences.wope.runtime.invalid_runtime.text = The runtime is invalid.\nWOPE 6.0.3 or above is required.
 
 preview.wope.title = WOPE Preview
-preview.wope.not_configured.text = This preview is still experimental, edit your ~.shift.preferences.json file to configure it.
+preview.wope.not_configured.text = There is no WOPE runtime configured. Use preferences to add one.
 preview.wope.task.starting_runtime = Starting runtime %s
