Added native FS sync
- Native FS monitoring
- Out of sync artifact detection
- New refresh methods for FileSystemFolder and FileSystemDocument
- Navigator refresh on FS change
- Dialog (keep or replace) when FS change detected on document opened
in editor

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -57,6 +57,10 @@ dialog.confirm.delete_project.message = The project %s and all its content is go
 dialog.confirm.delete_folder.message = The folder %s and all its content is going to be deleted.\nDo you want to continue ?
 dialog.find_replace.find = Find
 dialog.find_replace.replace_all = Replace all
+dialog.confirm.out_of_sync.title = File out of sync
+dialog.confirm.out_of_sync.text = The file %s was modified outside the editor. Do you want to keep the current version or replace it with the new one ?
+dialog.confirm.out_of_sync.positive.text = Keep
+dialog.confirm.out_of_sync.negative.text = Replace
 
 # Main controller
 main.menu.file = File
