--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
                     <identifier>Shift</identifier>
                     <jvmArgs>-Xms768m -Xmx2048m</jvmArgs>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.twdata.maven</groupId>
+                        <artifactId>mojo-executor</artifactId>
+                            <version>2.1.0</version>
+                    </dependency>
+                </dependencies>
             </plugin>
            
             
